--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,6 @@ authors = ["Bill Gross <bill.gross@me.com>"]
 version = "0.1.0"
 
 [deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 NIfTI = "a3a9e032-41b5-5fc4-967a-a6b7a19844d3"
